<resources>
    <string name="app_name">TimePlan2</string>

    <!--    Start界面-->
    <string name="start_welcome">欢迎使用本软件</string>

    <!--    left menu侧滑界面-->
    <string name="left_menu1">菜单1</string>
    <string name="left_menu2">菜单2</string>
    <string name="left_menu3">菜单3</string>
    <string name="left_menu4">菜单4</string>

    <!--    BottomNavigationView-->
    <string name="title_first">现在</string>
    <string name="title_second">未来</string>
    <string name="title_third">设置</string>

    <!--    now界面-->
    <string name="fg1_toolbar">当日任务</string>

    <!--    add界面-->
    <string name="fg2_toolbar">近期任务</string>

    <!--    set界面-->
    <string name="fg3_toolbar">设置</string>

    <!--    login登陆界面-->
    <string name="main_button">点击登陆</string>
    <string name="hint_login_username">请输入用户名</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="digits_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ?!=+-_.,</string>
    <string name="login_forgetPassword">忘记密码</string>
    <string name="login_register">立即注册</string>
    <string name="login">登陆</string>
    <string name="login_remember">记住密码</string>
    <string name="login_otherAccount">试试其他账号登陆</string>

    <!--    register注册界面-->
    <string name="hint_reenter_password">请重输密码</string>
    <string name="hint_input_phoneNumber">请输入手机号码</string>
    <string name="register">注册</string>
    <string name="agreement">同意用户协议</string>

    <!--NameDialog-->
    <!--    文本框的hit-->
    <string name="dlg_et_hit_top">What&#x0020;do&#x0020;you&#x0020;want&#x0020;to&#x0020;do?</string>
    <string name="dlg_ed_hit_bottom">Anything&#x0020;else?</string>
    <!--    设置功能-->
    <string name="dlg_tv_left_top">边框颜色</string>
    <string name="dlg_tv_left_bottom">内部颜色</string>
    <string name="dlg_tv_right_top">设置分组</string>
    <string name="dlg_tv_right_bottom">点击设置</string>

    <!--AddTaskDialog-->
    <string name="dlg_add_tv_left_top">开始时间</string>
    <string name="dlg_add_tv_left_bottom">结束时间</string>
    <string name="dlg_add_tv_bottom">设置分组</string>

    <!--    set Task Name时的dialog的button-->
    <string name="dlg_button">完成</string>

    <!--    left menu侧滑界面-->
    <string name="left_menu_1">软件说明</string>
    <string name="left_menu_2">设置</string>
    <string name="left_menu_3">捐赠</string>
    <string name="left_menu_4">....</string>
</resources>