<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/main_left_img_head"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:padding="2dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_account"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328"
        app:shapeAppearanceOverlay="@style/roundedHead"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/main_left_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:text="@string/left_menu1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/main_left_img_head"
        app:layout_constraintStart_toStartOf="@+id/main_left_img_head"
        app:layout_constraintTop_toBottomOf="@+id/main_left_img_head" />

    <TextView
        android:id="@+id/main_left_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:text="@string/left_menu2"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/main_left_1"
        app:layout_constraintStart_toStartOf="@+id/main_left_1"
        app:layout_constraintTop_toBottomOf="@+id/main_left_1" />

    <TextView
        android:id="@+id/main_left_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:text="@string/left_menu3"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/main_left_4"
        app:layout_constraintEnd_toEndOf="@+id/main_left_2"
        app:layout_constraintStart_toStartOf="@+id/main_left_2"
        app:layout_constraintTop_toBottomOf="@+id/main_left_2" />

    <TextView
        android:id="@+id/main_left_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:text="@string/left_menu4"
        android:clickable="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/main_left_3"
        app:layout_constraintStart_toStartOf="@+id/main_left_3"
        app:layout_constraintTop_toBottomOf="@+id/main_left_3" />

</androidx.constraintlayout.widget.ConstraintLayout>