<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14999998"
        app:srcCompat="@drawable/ic_account"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/hint_login_username"
        android:theme="@style/textInputLayout"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.00999999">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="8dp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/login_edit_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/hint_input_password"
        android:theme="@style/textInputLayout"
        app:errorEnabled="true"
        app:counterMaxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_til_username"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#C3000000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/digits_password"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="8dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/login_edit_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/login_forgetPassword"
        app:layout_constraintBottom_toBottomOf="@+id/login_btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_btn_register"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/login_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/login_register"
        app:layout_constraintBottom_toTopOf="@+id/login_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:backgroundTint="@color/default_color"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_til_password"
        app:layout_constraintVertical_bias="0.120000005" />

    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <View
        android:id="@+id/view2"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/login_otherAccount"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_btn_qq"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_login_qq"
        app:layout_constraintBottom_toBottomOf="@+id/login_btn_wechat"
        app:layout_constraintEnd_toStartOf="@+id/login_btn_wechat"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/login_btn_wechat"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/login_btn_wechat"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/ic_login_wechat"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/login_btn_qq"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/login_cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login_remember"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>