<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="330dp"
        android:layout_height="540dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toTopOf="@+id/register_til_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/ic_head_portrait"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_login_username"
            android:theme="@style/textInputLayout"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:layout_constraintBottom_toTopOf="@+id/register_til_password1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="8dp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/register_edit_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_til_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_input_password"
            android:theme="@style/textInputLayout"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39999998"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#C3000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_et_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/digits_password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/register_edit_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_til_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_reenter_password"
            android:theme="@style/textInputLayout"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_til_password1"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#C3000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_et_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/digits_password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/register_edit_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_input_phoneNumber"
            android:theme="@style/textInputLayout"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_til_password2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:drawablePadding="8dp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/register_edit_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/register"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:backgroundTint="@color/default_color"
            app:cornerRadius="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_cb_agreement"
            app:layout_constraintVertical_bias="0.120000005" />

        <CheckBox
            android:id="@+id/register_cb_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/agreement"
            app:layout_constraintEnd_toEndOf="@+id/register_btn_register"
            app:layout_constraintTop_toBottomOf="@+id/register_til_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>