<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toTopOf="@+id/view1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_head"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_head_portrait"
            app:layout_constraintBottom_toTopOf="@+id/view1"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedHead"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="46dp"
            android:background="@color/litterWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="时间"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:hint="@string/dlg_et_hit_top"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="Autofill" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/et_describe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_describe"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/dlg_ed_hit_bottom"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_color_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/dlg_tv_left_top"
            android:textSize="18sp"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_describe"
            android:focusable="true" />

        <com.example.timeplantest.weight.RoundCornerView
            android:id="@+id/view_color_border"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_color_border"
            app:layout_constraintStart_toEndOf="@+id/tv_color_border"
            app:layout_constraintTop_toTopOf="@+id/tv_color_border" />

        <TextView
            android:id="@+id/tv_set_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/dlg_tv_right_top"
            android:textSize="18sp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_color_border"
            android:focusable="true" />

        <TextView
            android:id="@+id/tv_color_inside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dlg_tv_left_bottom"
            android:textSize="18sp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="@+id/tv_color_border"
            app:layout_constraintStart_toStartOf="@+id/tv_color_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_color_border"
            android:focusable="true" />

        <com.example.timeplantest.weight.RoundCornerView
            android:id="@+id/view_color_inside"
            android:layout_width="16dp"
            android:layout_height="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_color_inside"
            app:layout_constraintStart_toStartOf="@+id/view_color_border"
            app:layout_constraintTop_toTopOf="@+id/tv_color_inside" />

        <EditText
            android:id="@+id/tv_set_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/dlg_tv_right_bottom"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="@+id/tv_set_repeat"
            app:layout_constraintStart_toStartOf="@+id/tv_set_repeat"
            app:layout_constraintTop_toBottomOf="@+id/tv_set_repeat"
            android:importantForAutofill="no"
            tools:ignore="TextFields" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dlg_button"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:backgroundTint="@color/default_color"
            app:cornerRadius="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_color_inside" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>